2008-11-10  Esteban Sanchez  <estebans@artica.es>

	* operation/companies/company_detail.php: Fixed type error when
	fetching company id.

	* include/functions_graph.php: Do not show any error on
	generic_graph().

	* operation/incidents/type_detail.php: Fixed table width to work in
	IE6+.

2008-11-10  Esteban Sanchez  <estebans@artica.es>
	
	* include/functions_form.php: Added support to search by incident
	type. Also it's now possible to search by company.

	* operation/companies/company_detail.php: Added link to contracts and
	contacts.

	* operation/incidents/incident.php: Style correction. Removed
	$id_usuario and replaced by $config.

	* operation/incidents/incident_search.php: Added support to search by
	incident type.

2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* operation/incidents/incident.php: Default search now only show new
	incidents.

	* include/functions_db.php: Fixed an error in incident_tracking that
	cause not showing user name and a PHP notice. Show nothing on
	sql_error_handler() based on error_reporting() level.

2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* sql_error_handler: Added sql_error_handler() to hable SQL errors on
	process_sql. Improve SQL error handling in process_sql().

2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* operation/users/user_edit.php: Fixed an error when updating the user
	which was not showing the updated fields, but the old ones.

2008-11-07  Esteban Sanchez  <estebans@artica.es>

	* operation/incidents/incident_files.php,
	operation/kb/browse_data.php, operation/kb/manage_data.php,
	operation/projects/task_files.php: Encode files URL characters to
	allow special characters in filenames. It was causing 404 errors if
	the filename has characters like #@=.

	* operation/incidents/incident_search.php: Ignore closed incident
	without valid date in statistics.

2008-11-06  Sancho Lerena <slerena@artica.es>

	* include/functions_form.php: Added blank space. Incident_details_list 